--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <main>
         <header>
-            <h1> Curso em vídeo  </h1>
+            <h1> Site  Cursom vídeo  </h1>
         </header>
         
         <article>
