--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <main>
         <header>
-            <h1> Curso em vídeo  </h1>
+            <h1> Site Curso em vídeo  </h1>
         </header>
         
         <article>
